[workspace]
members = [
    "category_macro",
    "lotto",
    "lotto_sys",
    "lotto_macros",
    "loccolator",
    "lotto_log",
    "lotto_link",

    # Supporting crates
    "lib/trust/",
    "lib/graph_util/*/",
    "lib/rinflex",

    # Handler definitions
    "handlers/",
    "handlers/*/",

    # Staticlibs
    "engine",
    "cli"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
bincode = "=2.0.0-rc.3"
loccolator = { path = "loccolator" }
log = "0.4.22"

lotto = { path = "lotto" }
lotto_log = { path = "lotto_log" }
lotto_macros = { path = "lotto_macros" }
lotto_sys = { path = "lotto_sys" }
lotto_link = { path = "lotto_link" }

rusty_cli = { path = "cli/rusty_cli" }
rusty_engine = { path = "engine/rusty_engine" }
rusty_handlers = { path = "handlers" }

[profile.dev]
# The default "full" option is quite large, which makes builds slow
# when we dump blob-plotto.h.
panic = "abort"
debug = "full"
lto = "thin"

[profile.RelWithDbg]
inherits = "release"
panic = "abort"
debug = 2
strip = false
lto = "thin"
debug-assertions = true
# split-debuginfo = "packed"
